fix: allow unbreakable lines to wrap

--- a/src/usr/local/emhttp/plugins/enhanced.log/assets/style.css
+++ b/src/usr/local/emhttp/plugins/enhanced.log/assets/style.css
@@ -5,3 +5,8 @@
 .tablesorter-filter.disabled {
     display: none;
 }
+
+table.tablesorter tbody tr td {
+    overflow-wrap: anywhere;
+    text-align: left;
+}
